repr-trait/test/transparent_fail.rs
use repr_trait::Transparent;

#[derive(Transparent)]
struct NotTransparent {
}

fn main() {}
